# ashybulakstroy-legal-ai

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  MIGRATION_PLAN.md  PROGRESS.md  README.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  run_server.ps1  start_server.ps1  ТЕХНИЧЕСКОЕ_ЗАДАНИЕ.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: case.py  document.py  user.py
dev/stage_1/: AGENTS.md  PROGRESS.md  pyproject.toml  requirements.txt  run_app.py  run_server.ps1  start_server.ps1
dev/stage_1/app/: config.py  database.py  main.py  mcp_cli.py  mcp_server.py  mcp_sse.py  seed.py
dev/stage_1/app/admin/: admin.py
dev/stage_1/app/api/: routes.py
dev/stage_1/app/models/: __init__.py  legislation.py
dev/stage_1/app/parsers/: __init__.py  adilet_parser.py  kodeksy_parser.py
dev/stage_1/app/schemas/: legislation.py
dev/stage_1/app/services/: ai_service.py  legislation_service.py
dev/stage_1/app/templates/: category.html  index.html  law.html  laws.html  stats.html
dev/stage_1/docs/: data_sources.md
dev/stage_1/scripts/: fix_categories.py  load_laws.py
dev/stage_1/tests/: test_e2e_api.py  test_ranking.py
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: Home.tsx  StatsDetail.tsx
(+2 files in other folders)
