[project]
name = "law-kz-mcp"
version = "0.1.0"
description = "MCP сервер по законодательству Республики Казахстан"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqladmin>=0.20.0",
    "python-multipart>=0.0.12",
    "mcp>=1.2.0",
    "whoosh>=2.7.4",
    "jinja2>=3.1.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
